# alfred

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ALFRED.md  ARCHITECTURE.md  BELIEFS.md  Dockerfile  IDENTITY.md  LESSONS.md  MANIFEST.md  MEMORY.md  MOBILE_FIRST_TUTORIAL.md  OPENCLAW-PI.md  PI-AGENT-PLAN.md  PI-README.md  QUICK-START.md  QUICKSTART.md  README.md  SECURITY_AUDIT.md  SKIPPED_ERRORS.md  TODO.md  USER.md  ask.sh  biome.json  build-prompt.sh  config.json  docker-compose.yml  dog-fooding-notes.txt  example.scm  fix_tui.py  hello.txt  knip.json  lighthouserc.json  message.txt  package-lock.json  package.json  pi-wrapper.sh  pnpm-lock.yaml  pyproject.toml  (+19 more)
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  repository-description.md
.github/workflows/: ci.yml  codeql.yml  lighthouse.yml  pr-labeler.yml  publish.yml  release.yml
.pi/extensions/: README-auto-compact.md  README.md  auto-compact-buggy.ts  auto-compact-fixed.ts  terminal.ts
.pi/prds/: 130-context-sidebar-panel.md
.pi/skills/token-burn/: SKILL.md  package.json  pnpm-lock.yaml  pyproject.toml
.pi/skills/token-burn/scripts/: test_token_burn.py
.pi/skills/token-burn/scripts/tokenizers/: __init__.py
.pi/skills/token-burn/src/: token-burn.ts  token_burn.py
alfred/: __init__.py  __main__.py  config.py  context_loader.py  dispatcher.py  embeddings.py  llm_api.py  main.py  memory.py  models.py  pi_manager.py  shared_workspace.py  storage.py  subagent.py  table_renderer.py  telegram_bot.py  token_tracker.py  verbose_logger.py
alfred-prd/: .env.example  AGENTS.md
completions/: README.md  _alfred  alfred.bash  alfred.fish
data/: AGENTS.md  SOUL.md  USER.md  cron.jsonl  cron_history.jsonl  cron_logs.jsonl
dispatcher/: __init__.py  config.py  dispatcher.py  llm_api.py  main.py  pi_manager.py  telegram_bot.py
docs/: API.md  ARCHITECTURE.md  BITTER-LESSONS.md  CAS_ATOMICITY.md  CAS_DESIGN.md  COMPLETION.md  DEPLOYMENT.md  EMBEDDINGS.md  MEMORY.md  PLACEHOLDERS.md  README.md  ROADMAP.md  TUI-RENDERING-PITFALLS.md  bitter-lessons.md  code_quality_report.md  cron-jobs.md  execution-plan-cleanup.md  execution-plan-prd120-milestone4.md  how-alfred-helps.md  job-api.md  logo-prompt.txt  memory_session_system_report.md  notifier.md  pypitui-migration-guide.md  relational-support-model.md  ruthless-code-analysis.md  self-model.md  template-sync.md  ui-design.md  websocket-protocol.md
docs/rich/: panel.md  (+24 more)
memory-system/: architecture.md
openclaw_pi/: __init__.py  __main__.py  config.py  dispatcher.py  embeddings.py  main.py  memory.py  models.py  pi_manager.py  storage.py  subagent.py  telegram_bot.py  token_tracker.py
prds/: 10-alfred-the-rememberer.md  100-config-toml-context-budget-status-line.md  101-tool-call-persistence-context-visibility.md  102-three-tier-memory-system.md  102-unified-memory-system.md  103-tool-calls-in-resumed-sessions.md  105-integrate-local-embeddings-and-faiss.md  109-great-consolidation.md  114-hardware-cursor-sync.md  114-tui-freeze-mosh-tmux.md  117-unified-sqlite-storage-system.md  119-alfredcore-refactoring-standalone-cron-daemon.md  12-m2-core-infrastructure.md  120-cron-job-linter-socket-api.md  13-m3-memory-foundation.md  131-ctrl-t-tool-call-expansion.md  135-persistent-memory-context.md  137-pypitui-cruft-removal.md  138-modernize-web-ui-design.md  138a-kidcore-neocities-party-mode-theme.md  139-webui-test-fixture-realism.md  140-pypitui-v2-adoption-and-alfred-runtime-rewrite.md  142-webui-daemon-autostart-and-runtime-status-popover.md  147-alfred-self-model-and-personality.md  148-template-sync-merge-conflicts.md  15-m5-telegram-bot.md  151-web-ui-compose-cancel-and-edit-while-streaming.md  155-interleaved-tool-calls-thinking-blocks.md  156-playwright-browser-control.md  157-migrate-to-pygments-mistune.md  159-native-application-experience-enhancements.md  16-m6-kimi-provider.md  160-dictation-voice-mode.md  161-documentation-update-fix-outdated-architecture.md  162-web-ui-websocket-first-status-and-debug-instrumentation.md  164-repo-wide-esm-migration.md  165-selective-tool-outcomes-and-context-viewer-fixes.md  167-support-memory-foundation.md  168-adaptive-support-profile-and-intervention-learning.md  169-reflection-reviews-and-support-controls.md  (+150 more)
scripts/: create_kimi_pfp.py  debug_cot.py  debug_mobile.py  generate-static-completions.py  prepare-commit-msg  screenshot_compare.py  screenshot_themes.py  show_screenshots.py  test_cot.py  test_mobile.py
skills-example/: README.md
src/: __main__.py  agent.py  alfred.py  alfred_async.py  config.py  context.py  context_display.py  data_manager.py  embeddings.py  llm.py  memory.py  placeholders.py  search.py  session.py  session_context.py  session_storage.py  templates.py  theme.py  themes.py  token_tracker.py  type_defs.py  types.py
system-prompt/: builder.md
templates/: AGENTS.md  MEMORY.md  SOUL.md  SYSTEM.md  TOOLS.md  USER.md  config.toml
tests/: __init__.py  conftest.py  test_agent.py  test_agent_observability.py  test_agent_run_stream.py  test_agents_atomic_extraction.py  test_alfred.py  test_alfred_daemon.py  test_alfred_refactor.py  test_alfred_tool_calls.py  test_assign_session_id.py  test_cas_store.py  test_cli.py  test_cli_entrypoint.py  test_cli_webui_logging.py  test_cli_webui_startup.py  test_completion_performance.py  test_config.py  test_config_template.py  test_config_update.py  test_container.py  test_context_budget_rename.py  test_context_command.py  test_context_display.py  test_context_integration.py  test_context_loader.py  test_context_loader_memory_budget.py  test_context_memory_scoring.py  test_context_observability.py  test_core.py  test_core_observability.py  test_cron_tools_behavioral.py  test_ctrl_c_handling.py  test_daemon_async_jobs.py  test_data_manager.py  test_dispatcher.py  test_dispatcher_commands.py  test_e2e_real.py  test_embeddings.py  test_embeddings_error.py  (+81 more)
vhs-test/: FINDINGS.md  ansi.tape  ansi.txt  ctrlc.tape  ctrlc.txt  demo.tape  demo.txt  keys.tape  keys.txt  rich.tape  rich.txt
workspace/: AGENTS.md
(+756 files in other folders)
