[project]
name = "alfred-assistant"
dynamic = ["version"]
description = "The Rememberer - A persistent memory-augmented LLM assistant"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Jeremy Ball", email = "jeremysball@pm.me" }]
keywords = [
  "llm",
  "assistant",
  "memory",
  "ai",
  "telegram",
  "cli",
  "personal-growth",
  "executive-assistant",
  "adhd-aid",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Communications :: Chat",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "python-telegram-bot>=21.0",
  "openai>=1.0",
  "numpy>=1.24",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
  "aiofiles>=23.0",
  "tiktoken>=0.5",
  "aiohttp>=3.9",
  "croniter>=2.0",
  "psutil>=5.9",
  "typer>=0.12",
  "rich>=13.0",
  "prompt-toolkit>=3.0",
  "pypitui>=1.0.0",
  "playwright>=1.58.0",
  "markdownify>=1.2.2",
  "tomli>=2.0.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "websockets>=12.0",
  "torch>=2.0.0",
  "sentence-transformers>=2.5.0",
  "aiosqlite>=0.21.0",
  "sqlite-vec>=0.1.6",
]

[project.urls]
Homepage = "https://github.com/jeremysball/alfred"
Repository = "https://github.com/jeremysball/alfred"
Issues = "https://github.com/jeremysball/alfred/issues"

[project.scripts]
alfred = "alfred.cli.main:app"
alfred-cron-runner = "alfred.cli.cron_runner:main"

[project.optional-dependencies]
dev = [

  "basedpyright>=1.38.2",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.0",
  "ruff>=0.2",
  "respx>=0.21",
  "pytest-mock>=3.12",
  "dotenv-cli>=3.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["UP047"]  # Allow traditional TypeVar for generic functions

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_generics = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=alfred --cov-report=term-missing -m 'not integration and not e2e and not slow'"
filterwarnings = [
  # FAISS ships C extensions via SWIG; these warnings come from the C layer, not our code
  "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
markers = [
  "integration: marks tests that hit real external APIs (skipped by default)",
  "e2e: marks end-to-end tests requiring full environment (skipped by default)",
  "slow: marks tests as slow running (skipped by default)",
]

[tool.coverage.run]
source = ["src/alfred"]
omit = ["*/tests/*"]

[tool.hatch.build.targets.wheel]
packages = ["src/alfred"]

[tool.hatch.version]
source = "vcs"

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
pypitui = { path = "../pypitui", editable = true }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "radon>=6.0.1",
    "ruff>=0.15.1",
    "types-aiofiles>=25.1.0.20251011",
    "types-croniter>=6.0.0.20250809",
    "types-psutil>=7.2.2.20260130",
    "types-torch>=0.1.1",
    "vulture>=2.15",
]
